--- a/ReadMe
+++ b/ReadMe
@@ -8,3 +8,8 @@ different filters, pie chart for reports. The app allows the following:
   - send e-mails to students where a new homework is added or when he / she gets a grade;
   
   This app includes OOP principles, design patterns, data file, SQLite databse, Threading, use of iText library.
+
+
+![image1](https://user-images.githubusercontent.com/38671514/53989598-fcf92c00-412e-11e9-8c29-0d1a35e17149.png)
+![image2](https://user-images.githubusercontent.com/38671514/53989601-fec2ef80-412e-11e9-8780-c0384ba710a8.png)
+![image3](https://user-images.githubusercontent.com/38671514/53989606-ff5b8600-412e-11e9-94e4-8e2b7d11875b.png)
